fixed z-index infos

--- a/src/style/ar.scss
+++ b/src/style/ar.scss
@@ -2,11 +2,11 @@
     width: 100%;
     height: 100vh;
     position: fixed;
+    z-index: 800;
     top: 0;
     left: 0;
     padding: 0;
     margin: 0;
-
 }
 
 .ar-loading-container {
@@ -31,9 +31,10 @@
 .ar-nav-container-outer {
     width: 100%;
     overflow: hidden;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
+    z-index: 1001;
 }
 
 .ar-nav-inner {
@@ -71,7 +72,7 @@
 }
 
 .ar-info-container {
-    position: absolute;
+    position: fixed;
     top: 3px;
     right: 7px;
     z-index: 1001;
